@@ -188,7 +188,7 @@ new_struct(VALUE name, VALUE super)
     }
     id = rb_to_id(name);
     if (rb_const_defined_at(super, id)) {
-	rb_warn("redefining constant Struct::%s", StringValuePtr(name));
+	rb_warn("redefining constant %"PRIsVALUE"::%"PRIsVALUE, super, name);
 	rb_mod_remove_const(super, ID2SYM(id));
     }
     return rb_define_class_id_under(super, id, super);
